syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "configuration/contractflow.proto";

option go_package = "github.com/xncc/protos/contract";
option java_package = "com.xiangna.www.protos.contract";

package protos;

// ======================================融资订单数据=============================================
// 订单表单数据
message ContractData {
    // 发起申请方维护字段
    int64 expect_amount = 1; // 供应商|保理 申请融资金额
    int32 financing_period = 2; // 融资期限(天)
    google.protobuf.Timestamp expect_expired_time = 3; // 供应商|保理 申请融资到期时间

    // 最终放款方维护字段
    int64 confirmed_amount = 4; // 保理|银行 最终审核融资金额
    google.protobuf.Timestamp confirmed_expired_time = 5; // 保理|银行 最终审核融资到期时间
    int64 confirmed_rate = 6; // 保理|银行 最终审核融资利率, 加密隔离
    repeated LedgerFile order_files = 7; // 融资申请相关文件, 公开的
}

// 订单款项金额汇总
message ContractMoneyCount {
    // 下面为结算字段,具体流水记录到交易明细,此处体现订单总金额
    // 放款
    int64 need_pay_amount = 1; // 实际需要支付的总金额
    int64 expenses_amount = 2; // 实际已支付的总金额
    int64 income_amount = 3; // 实际已收入的总金额

    // 还款
    int64 need_payback_loan_amount = 4; // 实际需要还款的总金额
    int64 payback_expenses_amount = 5; // 实际已还款的总金额
    int64 payback_income_amount = 6; // 实际已收入的总金额

    // 所有在申请订单内发生的金额交易(转账)都应该在此处有明确的流水
    repeated ContractTransactionDetail transaction_details = 7; // 申请订单中的交易明细
}

// 订单款项转移金额流水
message ContractTransactionDetail {
    AppVo expenses = 1; // 支出方信息
    int64 expenses_amount = 2; // 支出金额
    OrgBankAccount expenses_account = 3; // 支出账户

    AppVo income = 4; // 收入方信息
    OrgBankAccount income_account = 6; // 收入方账户
    string tansaction_remark = 7; // 交易备注
    repeated LedgerFile tansaction_notes = 8; // 交易票据(图)
    google.protobuf.Timestamp tansaction_time = 9; // 交易时间

    bool incom_confirm = 10; // 收入方确认
    OperateInfo operate_info = 11; // 数据操作信息
}